--- a/src/scss/modules/app-bar.scss
+++ b/src/scss/modules/app-bar.scss
@@ -15,7 +15,7 @@
   }
   margin: auto;
   margin-top: 5px;
-  width: 99%;
+  width: 99vw;
 }
 
 .js-hamburger {
